--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
   <!-- body starts -->
   <body class="">
     <main>
+        <h1>Frogger Game</h1>
 
        <h3> Seconds Left: <span id="time-left">20</span>s</h3> 
-       <h3>Result: <span id="result">0</span></h3>
+       <h3>Result: <span id="result"></span></h3>
 
-       <button id="start-pause-button">Start/Pause</button>
+       <button class="not-paused" id="start-pause-button">Start</button>
+       <div class="grid-container">
         <div class="grid">
         <div></div>
         <div></div>
@@ -115,6 +117,7 @@
         <div></div>
 
      </div>
+       </div>
 
 
 
