css and javascript
- edited styles to reflect mobile layout
- still figuring out how to make frog move with html-coded buttons... to be continued...

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- body starts -->
   <body class="">
     <main>
-        <h1>Frogger Game</h1>
+        <h1 class="game-title">Frogger Game</h1>
 
        <h3> Seconds Left: <span id="time-left">20</span>s</h3> 
        <h3>Result: <span id="result"></span></h3>
@@ -119,6 +119,18 @@
      </div>
        </div>
 
+<div class="directions-container">
+    <div class="up-button-container">
+        <button class="up-button">Up</button>
+    </div>
+    <div class="left-right-buttons-container">    
+        <button class="left-button">Left</button>
+        <button class="right-button"> Right </button>
+    </div>    
+    <div class="down-button-container">
+        <button class="down-button"> Down</button>
+    </div>
+</div>
 
 
 
