--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
 
   <!-- body starts -->
   <body class="">
+    <span class="directions-modal-bg" id="game-directions-modal"></span>
     <main>
+        <div class="directions-box">
+            <div class="directions" id="game-directions">
+              <div>
+              <h2 class="desktop-directions"> 1. Click 'start' </br> 2. Use your keyboard arrow keys to move the frog to the goal! </h2>
+              <h2 class="mobile-directions"> 1. Click 'start' <br>2. Use the direction pad<br> to move the frog to the goal! </h2>
+            </div>
+              <div>
+              <button class="close-directions" id="close-button"><h3>Got it</h3></button>
+              </div>
+            </div>
+          </div>
+
         <h1 class="game-title">Frogger Game</h1>
 
        <h3> Seconds Left: <span id="time-left">20</span>s</h3> 
